Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <div class="card-summary">
                     Apresentação da monitoria, perfil do monitor, cronograma de atendimentos e ferramentas de desenvolvimento.
                 </div>
-                <div class="btn-open">Aceder Aula <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
+                <div class="btn-open">Acessar <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
             </a>
 
             <!-- Aula 1 -->
@@ -247,7 +247,7 @@
                 <div class="card-summary">
                     O que são algoritmos, tipos de representação, variáveis, constantes e tipos primitivos de dados.
                 </div>
-                <div class="btn-open">Aceder Aula <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
+                <div class="btn-open">Acessar <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
             </a>
 
             <!-- Aula 2 -->
@@ -257,7 +257,7 @@
                 <div class="card-summary">
                     Tomadas de decisão no código: estruturas simples, compostas, aninhadas e a estrutura de escolha (Caso).
                 </div>
-                <div class="btn-open">Aceder Aula <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
+                <div class="btn-open">Acessar <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
             </a>
 
             <!-- Aula 3 -->
@@ -267,7 +267,7 @@
                 <div class="card-summary">
                     Automatização de tarefas com laços de repetição: Para (For), Enquanto (While) e Faça-Enquanto (Do-While).
                 </div>
-                <div class="btn-open">Aceder Aula <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
+                <div class="btn-open">Acessar <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
             </a>
 
             <!-- Aula 4 -->
@@ -277,7 +277,7 @@
                 <div class="card-summary">
                     Estruturas homogéneas: manipulação de Vetores e Matrizes, e o tratamento especial de Strings em C.
                 </div>
-                <div class="btn-open">Aceder Aula <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
+                <div class="btn-open">Acessar <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
             </a>
 
             <!-- Aula 5 -->
@@ -287,7 +287,7 @@
                 <div class="card-summary">
                     Estruturas heterogéneas: agrupamento de diferentes tipos de dados usando Structs e modelos de objetos.
                 </div>
-                <div class="btn-open">Aceder Aula <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
+                <div class="btn-open">Acessar <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
             </a>
 
             <!-- Aula 6 -->
@@ -297,7 +297,7 @@
                 <div class="card-summary">
                     Modularização de código: criação de Funções e Procedimentos, escopo de variáveis e parâmetros.
                 </div>
-                <div class="btn-open">Aceder Aula <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
+                <div class="btn-open">Acessar <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
             </a>
 
             <!-- Aula 7 -->
@@ -307,7 +307,7 @@
                 <div class="card-summary">
                     Manipulação de memória: endereçamento, operadores de endereço (&) e conteúdo (*) na Linguagem C.
                 </div>
-                <div class="btn-open">Aceder Aula <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
+                <div class="btn-open">Acessar <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
             </a>
 
             <!-- Aula 8 -->
@@ -317,7 +317,7 @@
                 <div class="card-summary">
                     Manipulação de ficheiros em disco: modos de abertura (r, w, a), escrita e leitura de dados em C e Python.
                 </div>
-                <div class="btn-open">Aceder Aula <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
+                <div class="btn-open">Acessar <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
             </a>
 
         </div>
@@ -333,4 +333,5 @@
     </div>
 
 </body>
+
 </html>
